--- a/requirements.txt
+++ b/requirements.txt
@@ -192,6 +192,7 @@ rfc3986-validator==0.1.1
 rich==13.6.0
 rpds-py==0.10.4
 rsa==4.9
+scapy==2.5.0
 scikit-learn==1.3.1
 scipy==1.11.3
 seaborn==0.13.0
